src/objects/Garantia_Poliza__c.object
<CustomObject>
    <fields>
        <fullName>GPOL_DIV_Capital_Asegurado__c</fullName>
        <label>Capital Asegurado</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPOL_DIV_Capital_Recomendado__c</fullName>
        <label>Capital Recomendado</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPOL_DIV_Franquicia__c</fullName>
        <label>Franquicia</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPOL_FOR_Descripcion_Garantia__c</fullName>
        <description>Sirve para sacar en la lista relacionada de &quot;Garantias Póliza&quot; del layout de &quot;Póliza/Contrato&quot;, el valor de la descripción de la garantía correspondiente.</description>
        <formula>GPOL_LKP_Garantia__r.GAR_TXT_Descripcion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción Garantía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPOL_LKP_Garantia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Garantía</label>
        <referenceTo>Garantia__c</referenceTo>
        <relationshipLabel>Garantías Póliza</relationshipLabel>
        <relationshipName>Garantias_Poliza</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPOL_LKP_VersionPolizaContrato__c</fullName>
        <label>Versión Póliza/Contrato</label>
        <referenceTo>Version_ContratoServicio__c</referenceTo>
        <relationshipLabel>Garantías Póliza</relationshipLabel>
        <relationshipName>Garantias_Poliza</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GPOL_TXT_Identificador__c</fullName>
        <description>Campo externo y exclusivo</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Garantía Póliza</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantías Póliza</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(GPOL_TXT_Identificador__c), GPOL_TXT_Identificador__c &lt;&gt; GPOL_LKP_VersionPolizaContrato__r.Name + &apos;_&apos; + GPOL_LKP_Garantia__r.GAR_TXT_Codigo_Garantia__c), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>